--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <header>
-        <span>로고가 들어갈 위치</span>
+        <img src="logo.png" class="logo">
         <nav>
             <button>PROJECTS</button>
             <button>MEMBERS</button>
