로고 추가 및 버튼 링크로 수정
- 일반 버튼들은 링크가 맞다고 생각하여 링크로 수정
- CAUMC 제목과 로고 추가

--- a/index.html
+++ b/index.html
@@ -9,12 +9,17 @@
 
 <body>
     <header>
-        <img src="logo.png" class="logo">
+        <div class="logo">
+            <img src="logo.png" class="logo-img">
+            <span><strong>CAUMC</strong></span>
+        </div>
+        
         <nav>
-            <button>PROJECTS</button>
-            <button>MEMBERS</button>
-            <button>NOTICE</button>
-            <button>태양</button> <!--일반 버튼이 아니라 누르면 선택지가 내려옴-->
+            <!--다른 페이지로 넘어가니까 a 태그가 맞을 것 같다.-->
+            <a href="https://www.smumc.co.kr/projects">PROJECTS</a>
+            <a href="https://www.smumc.co.kr/members">MEMBERS</a>
+            <a href="https://www.smumc.co.kr/notice">NOTICE</a>
+            <button class="dropdown-btn">☀️</button> <!--일반 버튼이 아니라 누르면 선택지가 내려옴-->
         </nav>
     </header>
 </body>
