드롭다운 메뉴 추가

--- a/index.html
+++ b/index.html
@@ -19,7 +19,16 @@
             <a href="https://www.smumc.co.kr/projects">PROJECTS</a>
             <a href="https://www.smumc.co.kr/members">MEMBERS</a>
             <a href="https://www.smumc.co.kr/notice">NOTICE</a>
-            <button class="dropdown-btn">☀️</button> <!--일반 버튼이 아니라 누르면 선택지가 내려옴-->
+            <!-- 드롭다운 메뉴 -->
+            <div class="dropdown">
+                <button class="dropdown-btn">☀️</button>
+                <div class="dropdown-menu">
+                    <a href="#" class="dropdown-item">Light</button>
+                    <a href="#" class="dropdown-item">Dark</a>
+                    <a href="#" class="dropdown-item">System</a>
+                </div>
+            </div>
+            
         </nav>
     </header>
 </body>
