section에 메인 화면 추가

--- a/index.html
+++ b/index.html
@@ -28,8 +28,24 @@
                     <a href="#" class="dropdown-item">System</a>
                 </div>
             </div>
-            
         </nav>
     </header>
+    <section class="main">
+            <div>
+                <img src="peekle_test_3.png" class="main-img">
+            </div>
+            
+            <div>
+                <h1>
+                    <span class="green">U</span>niversity <br>
+                    <span class="green">M</span>akeUs <br>
+                    <span class="green">C</span>hallenge
+                </h1>
+                <div class="main-text">
+                    <p><span class="green">앱&웹 서비스 런칭</span>에 <span class="green">도전</span>하는 대학생 IT 연합동아리</p>
+                    <button class="main-button">9기 모집예정</button>
+                </div>
+            </div>        
+    </section>
 </body>
 </html>
