--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <div class="logo">
             <img src="logo.png" class="logo-img">
-            <a href="https://www.smumc.co.kr"><strong>CAUMC</strong></a>
+            <a href="https://www.smumc.co.kr" class="title-text"><strong>CAUMC</strong></a>
         </div>
         
         <nav>
