--- a/src/index.html
+++ b/src/index.html
@@ -10,26 +10,20 @@
 <body>
     <div class="container">
         <div class="title-container">
-            오늘 할 일
+            📋 오늘 할 일
         </div>
-        <div class="todo-input">
-            <input type="text" id="todo-input" placeholder="할 일이 또 있어?">
-            <button class="add-btn">할 일 추가</button>
+        <div class="input-container">
+            <input type="text" id="todo-input" placeholder="설마 할 일이 또 있어요?">
+            <button id="add-btn">을(를) 해야합니다.</button>
         </div>
         <div class="list-container">
             <div class="todo-box">
-                <div class="list-title">할 일</div>
-                <div class="">
-                    <div>할 일 1</div>
-                    <div>할 일 2</div>
-                </div>
+                <h3 class="list-title">할 일 😭</h3>
+                <ul id="todo-list"></ul>
             </div>
             <div class="done-box">
-                <div class="list-title">한 일</div>
-                <div class="">
-                    <div>한 일 1</div>
-                    <div>한 일 2</div>
-                </div>
+                <h3 class="list-title">한 일 😄</h3>
+                <ul id="done-list"></ul>
             </div>
         </div>
     </div>
