--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="./week_02/src/index.tsx"></script>
+    <script type="module" src="./vite-project/src/main.tsx"></script>
   </body>
 </html>
